@@ -77,7 +77,8 @@ public class DefaultAndroidInput implements AndroidInput {
 		int type;
 		int x;
 		int y;
-		int scrollAmount;
+		int scrollAmountX;
+		int scrollAmountY;
 		int button;
 		int pointer;
 	}
@@ -419,7 +420,7 @@ public class DefaultAndroidInput implements AndroidInput {
 						processor.mouseMoved(e.x, e.y);
 						break;
 					case TouchEvent.TOUCH_SCROLLED:
-						processor.scrolled(e.scrollAmount);
+						processor.scrolled(e.scrollAmountX, e.scrollAmountY);
 					}
 					usedTouchEvents.free(e);
 				}
