@@ -367,7 +367,7 @@ final public class DefaultLwjglInput implements LwjglInput {
 						processor.mouseMoved(e.x, e.y);
 						break;
 					case TouchEvent.TOUCH_SCROLLED:
-						processor.scrolled(e.scrollAmount);
+						processor.scrolled(0, e.scrollAmount);
 					}
 					usedTouchEvents.free(e);
 				}
