@@ -87,31 +87,10 @@ public class DefaultLwjgl3Input implements Lwjgl3Input {
 	};
 	
 	private GLFWScrollCallback scrollCallback = new GLFWScrollCallback() {
-		private long pauseTime = 250000000L; //250ms
-		private float scrollYRemainder;
-		private long lastScrollEventTime;
 		@Override
 		public void invoke(long window, double scrollX, double scrollY) {
 			DefaultLwjgl3Input.this.window.getGraphics().requestRendering();
-			if (scrollYRemainder > 0 && scrollY < 0 || scrollYRemainder < 0 && scrollY > 0 ||
-				TimeUtils.nanoTime() - lastScrollEventTime > pauseTime ) { 
-				// fire a scroll event immediately:
-				//  - if the scroll direction changes; 
-				//  - if the user did not move the wheel for more than 250ms
-				scrollYRemainder = 0;
-				int scrollAmount = (int)-Math.signum(scrollY);
-				eventQueue.scrolled(scrollAmount);
-				lastScrollEventTime = TimeUtils.nanoTime();
-			}
-			else {
-				scrollYRemainder += scrollY;
-				while (Math.abs(scrollYRemainder) >= 1) {
-					int scrollAmount = (int)-Math.signum(scrollY);
-					eventQueue.scrolled(scrollAmount);
-					lastScrollEventTime = TimeUtils.nanoTime();
-					scrollYRemainder += scrollAmount;
-				}
-			}
+			eventQueue.scrolled(-(float)scrollX, -(float)scrollY);
 		}
 	};
 	
