@@ -18,6 +18,7 @@ package com.badlogic.gdx;
 
 import com.badlogic.gdx.utils.IntArray;
 import com.badlogic.gdx.utils.TimeUtils;
+import com.badlogic.gdx.utils.NumberUtils;
 
 /** Queues events that are later passed to the wrapped {@link InputProcessor}.
  * @author Nathan Sweet */
@@ -92,7 +93,7 @@ public class InputEventQueue implements InputProcessor {
 				localProcessor.mouseMoved(q[i++], q[i++]);
 				break;
 			case SCROLLED:
-				localProcessor.scrolled(q[i++]);
+				localProcessor.scrolled(NumberUtils.intBitsToFloat(q[i++]) , NumberUtils.intBitsToFloat(q[i++]));
 				break;
 			default:
 				throw new RuntimeException();
@@ -133,7 +134,7 @@ public class InputEventQueue implements InputProcessor {
 				i += 2;
 				break;
 			case SCROLLED:
-				i++;
+				i += 2;
 				break;
 			default:
 				throw new RuntimeException();
@@ -218,10 +219,11 @@ public class InputEventQueue implements InputProcessor {
 		return false;
 	}
 
-	public synchronized boolean scrolled (int amount) {
+	public synchronized boolean scrolled(float amountX, float amountY) {
 		queue.add(SCROLLED);
 		queueTime();
-		queue.add(amount);
+		queue.add(NumberUtils.floatToIntBits(amountX));
+		queue.add(NumberUtils.floatToIntBits(amountY));
 		return false;
 	}
 
