@@ -203,8 +203,8 @@ public class CameraInputController extends GestureDetector {
 	}
 
 	@Override
-	public boolean scrolled (int amount) {
-		return zoom(amount * scrollFactor * translateUnits);
+	public boolean scrolled (float amountX, float amountY) {
+		return zoom(amountY * scrollFactor * translateUnits);
 	}
 
 	public boolean zoom (float amount) {
