@@ -74,7 +74,7 @@ public class InputListener implements EventListener {
 		case mouseMoved:
 			return mouseMoved(event, tmpCoords.x, tmpCoords.y);
 		case scrolled:
-			return scrolled(event, tmpCoords.x, tmpCoords.y, event.getScrollAmount());
+			return scrolled(event, tmpCoords.x, tmpCoords.y, event.getScrollAmountX(), event.getScrollAmountY());
 		case enter:
 			enter(event, tmpCoords.x, tmpCoords.y, event.getPointer(), event.getRelatedActor());
 			return false;
@@ -128,7 +128,7 @@ public class InputListener implements EventListener {
 	}
 
 	/** Called when the mouse wheel has been scrolled. When true is returned, the event is {@link Event#handle() handled}. */
-	public boolean scrolled (InputEvent event, float x, float y, int amount) {
+	public boolean scrolled (InputEvent event, float x, float y, float amountX, float amountY) {
 		return false;
 	}
 
