@@ -94,7 +94,7 @@ public class ParticleEmitterChangeSpriteTest extends GdxTest {
 			}
 
 			@Override
-			public boolean scrolled (int amount) {
+			public boolean scrolled (float amountX, float amountY) {
 				return false;
 			}
 		};
