@@ -116,7 +116,7 @@ public class ParticleEmitterTest extends GdxTest {
 			}
 
 			@Override
-			public boolean scrolled (int amount) {
+			public boolean scrolled (float amountX, float amountY) {
 				return false;
 			}
 		};
