@@ -262,7 +262,7 @@ public class SpriteBatchTest extends GdxTest implements InputProcessor {
 	}
 
 	@Override
-	public boolean scrolled (int amount) {
+	public boolean scrolled (float amountX, float amountY) {
 		return false;
 	}
 
